# myRustApps

./: .gitignore  README.md  hello_from_rust.rs
mod_test/: Cargo.toml  Makefile
mod_test/src/: func.rs  main.rs
my_bluepill/: Cargo.toml  Makefile  memory.x  openocd.cfg  openocd.gdb
my_bluepill/.cargo/: config
my_bluepill/src/: main.rs
rust_cli/: Cargo.toml  Makefile
rust_cli/src/: func.rs  main.rs
